# QuantumTV

./: .dockerignore  .gitignore  CHANGELOG  Cargo.toml  README.md  VERSION.txt  docker-compose.yml  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  start.js  tsconfig.json
.github/workflows/: docker.yml  release.yml
crates/api-server/: Cargo.toml
crates/api-server/src/: config_file.rs  config_url.rs  lib.rs  main.rs  mod.rs  tvbox.rs
crates/api-server/tests/: config_file_test.rs  config_url_test.rs
crates/core/: Cargo.toml
crates/core/src/: admin_config.rs  adult.rs  (+5 more)
data/: storage.json
docker/: Dockerfile
public/: VERSION.txt
scripts/: generate-manifest.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop-shortcuts.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  scheduler.rs  storage.rs
src/app/: globals.css  layout.tsx  loading.tsx  page.tsx
src/components/: AnalyticsDashboard.tsx  AppLifecycleWatcher.tsx  CacheMonitor.tsx  CapsuleSwitch.tsx  ContinueWatching.tsx  DataMigration.tsx  DatabaseImportExport.tsx  DoubanSelector.tsx  EpisodeSelector.tsx  ErrorDisplay.tsx  FastLink.tsx  ImageOptimizationMonitor.tsx  MobileBottomNav.tsx  MobileHeader.tsx  NavbarGate.tsx  PageCacheInit.tsx  PageLayout.tsx  PlayerLoading.tsx  ProgressiveImage.tsx  QuantumTVFooterCard.tsx  ScrollableRow.tsx  SearchSuggestions.tsx  Sidebar.tsx  SiteProvider.tsx  TopNavbar.tsx  UserMenu.tsx  VersionChecker.tsx  VersionPanel.tsx  VideoCard.tsx
src/hooks/: useContentPoolSync.ts  useDoubanInfo.ts  useImageCachePreheater.ts  useImagePreload.ts  usePageCache.ts  useProgressiveImage.ts  useProxyImage.ts  useScrollRestoration.ts  useSourceFilter.ts  useSourceFilter.v2.ts
src/lib/: admin.types.ts  config.ts  db.client.ts  douban.client.ts  downstream.ts  fetchVideoDetail.ts  imagePreloader.ts  spiderJar.ts  types.ts  ui-layout.ts  utils.ts  version.ts  version_check.ts
(+60 files in other folders)
