[workspace]
members = [
    "crates/core",
    "crates/api-server"
]
exclude = [
    "src-tauri"
]
resolver = "2"

# 注意：src-tauri/ 不在 workspace 中，保持独立构建

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
urlencoding = "2"
scraper = "0.22"
regex = "1"
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"
rusqlite = { version = "0.38.0", features = ["bundled"] }
image = "0.24"
moka = { version = "0.12", features = ["future"] }
