[package]
name = "quantumtv-api"
version = "0.4.1"
edition = "2021"
description = "QuantumTV API Server (Axum)"

[dependencies]
# 核心业务逻辑
quantumtv-core = { path = "../core" }

# Axum web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# HTTP 客户端
reqwest = { workspace = true }

# 加密和编码
base64 = "0.22"
md5 = "0.7"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 环境变量加载
dotenvy = "0.15"

# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
urlencoding = { workspace = true }
url = { workspace = true }
moka = { workspace = true }
